# Valorant_bot

./: .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  db.db3  docker-compose.yml  pyproject.toml  requirements.txt
accounts/2833326187/: config.yml  device.json  session.token
accounts/2833326187/data/: image.db
accounts/2833326187/data/leveldb-v2/: 000011.ldb  000017.ldb  LOG  MANIFEST-000016
accounts/binary/: accounts.pkl
src/plugins/help/: __init__.py
src/plugins/kaihei/: __init__.py  blacklist.py  kaihei.py
src/plugins/test/: __init__.py
src/plugins/su-test/: __init__.py
